--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inspiration&family=Lato:wght@300&family=Montserrat:wght@300;400&family=Oswald&family=PT+Sans+Narrow&family=Palette+Mosaic&family=Quattrocento&family=Raleway:wght@500;700&family=Rubik&family=Syne+Mono&display=swap"
+    rel="stylesheet">
   <title>Watch Review </title>
 </head>
 
